--- a/Conversa/Base.lproj/Localizable.strings
+++ b/Conversa/Base.lproj/Localizable.strings
@@ -8,9 +8,7 @@
 "recover_password_failed_message" = "Couldn't find any email assocciated with this account";
 "recover_password_sent_message" = "Password recovery link sent";
 "signup_birhtday_toolbar_done" = "Done";
-"signup_password_length_error" = "Password is required";
 "signup_failed_message" = "Ohps, sorry, please try register again later";
-"sign_email_not_valid_error" = "Email is invalid";
 "sign_failed_message" = "Email and password didn't match any account";
 
 "token_session_error" = "Another device has started session, this device will log out";
@@ -56,7 +54,7 @@
 "c0i96zRLFyw" = "Books";
 "c1zZcJ8an9Z" = "Services";
 "c3b8NykTdo3" = "Toys";
-"c462mKRISE7" = "Electronics";
+"c462mKRISE7" = "Electronics & Tech";
 "c4EsFpxgOu6" = "Delivery";
 "c90Y0ajWUAG" = "Pets";
 "cDqCLGage9M" = "Beauty";
@@ -76,12 +74,15 @@
 "ccCZl1h0sXf" = "Office Supplies";
 "ccGWcPxDcB7" = "Food";
 "ccQy8YtN7j4" = "Entertainment";
-"cgBcgtlLRVw" = "Jewelry";
+"cgBcgtlLRVw" = "Jewelry & Accessories";
 "cr4ZYMKINHp" = "Women\'s Clothing";
 "cuRzYgo8krw" = "Women Shoes";
 "cydPTRrUJye" = "Health";
 "cDvl63HGh9j" = "Retailers";
 "cprn5lWuEDc" = "Online & Internet";
+"c63MVeTZE3q" = "Kid's Clothing";
+"cztraRwNrdX" = "Education";
+"c0GCyIw3HBP" = "Bakery & Treats";
 
 "category_results_error" = "Uphs, please try again";
 "category_results_empty" = "No results found";
@@ -113,3 +114,10 @@
 "settings_chat_quality_alert_action_medium" = "Medium";
 "settings_chat_quality_alert_action_low" = "Low";
 "settings_chat_quality_alert_action_cancel" = "Cancel";
+
+/*
+ * Common strings
+ */
+"common_action_cancel" = "Cancelar";
+"common_field_required" = "Required field";
+"common_field_invalid" = "Invalid field";
