--- a/Conversa/es.lproj/Localizable.strings
+++ b/Conversa/es.lproj/Localizable.strings
@@ -7,9 +7,9 @@
 */
 "recover_password_failed_message" = "No pudimos encontrar ninguna cuenta asociada a este correo electrónico";
 "recover_password_sent_message" = "Se ha enviado un link para recuperar tu contraseña, revisa tu correo";
-"signup_birhtday_toolbar_done" = "Listo";
-"signup_failed_message" = "Lo sentimos, por favor intenta registrarte de nuevo";
-"sign_failed_message" = "Correo electrónico y contraseña no encuentran una cuenta. Por favor verifica los datos";
+"sign_failed_message" = "Correo electrónico y contraseña no coinciden. Por favor verifica los datos";
+"signup_email_error" = "Este correo electrónico\nya está ocupado";
+"signup_complete_error" = "No pudimos procesar tu petición en\neste momento, intenta de nuevo más tarde";
 
 "token_session_error" = "Otro dispositivo ha iniciado sesión, este dispositivo cerrará sesión";
 "no_internet_connection_message" = "Sin conexión a internet";
@@ -19,18 +19,26 @@
 "chats_alert_action_unmute" = "No silenciar";
 "chats_alert_action_mute" = "Silenciar";
 "chats_alert_action_clear_conversation" = "Limpiar conversación";
-"chats_alert_action_cancel" = "Cancelar";
 "chats_alert_action_twelve_hours" = "12 horas";
 "chats_alert_action_one_day" = "1 día";
 "chats_alert_action_three_day" = "3 días";
 
+"chats_cell_conversation_location" = "Ubicación";
+"chats_cell_conversation_image" = "Imagen";
+"chats_cell_conversation_video" = "Video";
+"chats_cell_conversation_audio" = "Audio";
+"chats_cell_conversation_message" = "Mensaje";
+"chats_cell_conversation_empty" = "Empieza a chatear";
+"chats_cell_date_now" = "Ahora";
+"chats_cell_date_yesterday" = "Ayer";
+
+"conversation_inputtoolbar_placeholder" = "Escribe un mensaje";
 "conversation_menu_item_copy" = "Copiar";
 "conversation_menu_item_delete" = "Eliminar";
 "conversation_navigation_title" = "Atrás";
 "conversation_more_alert_action_library" = "Librería";
 "conversation_more_alert_action_camara" = "Cámara";
 "conversation_more_alert_action_location" = "Enviar ubicación";
-"conversation_more_alert_action_cancel" = "Cancelar";
 "conversation_message_info_received" = "Recibido";
 "conversation_message_info_waiting" = "Esperando";
 "conversation_message_info_sent" = "Enviado";
@@ -38,7 +46,6 @@
 "conversation_subtitle_writing" = "escribiendo...";
 "conversation_alert_action_unblock_title" = "Desbloquea este contacto para enviar mensajes";
 "conversation_alert_action_unblock" = "Desbloquear";
-"conversation_alert_action_unblock_cancel" = "Cancelar";
 "conversation_alert_action_location_title" = "No pudimos encontrar tu ubicación";
 "conversation_alert_action_camara_title" = "La imagen no pudo ser guardada";
 
@@ -47,27 +54,26 @@
 "conversation_unsent_alert_action_play" = "Reproducir";
 "conversation_unsent_alert_action_resend" = "Reenviar";
 "conversation_unsent_alert_action_delete" = "Eliminar";
-"conversation_unsent_alert_action_cancel" = "Cancelar";
 
 "categories_searchbar_placeholder" = "Busca por negocios, tiendas, etc";
 "category" = "Categoría";
 "c0i96zRLFyw" = "Libros";
 "c1zZcJ8an9Z" = "Servicios";
 "c3b8NykTdo3" = "Juguetes";
-"c462mKRISE7" = "Electrónicos";
+"c462mKRISE7" = "Electrónicos & Tech";
 "c4EsFpxgOu6" = "Servicio a domicilio";
 "c90Y0ajWUAG" = "Mascotas";
 "cDqCLGage9M" = "Belleza";
 "cFBv7AV5OGU" = "Videojuegos";
 "cJi1FwE21F8" = "Suplementos para fiesta";
 "cMHbjypaY4R" = "Ropa de hombre";
-"cQNFkAelMAd" = "Hogar y Jardín";
+"cQNFkAelMAd" = "Hogar & Jardín";
 "cR7LZJ3Lbj8" = "Regalos";
 "cRWcS1d4bqt" = "Bebés";
 "cSYHk42aEOz" = "Carros";
 "cTFau41aZ8E" = "Instrumentos musicales";
 "cVZg31Kxzew" = "Viajes";
-"cW0lNHTPV3v" = "Deportes y Fitness";
+"cW0lNHTPV3v" = "Deportes & Fitness";
 "caDuBd0GuuH" = "Restaurantes";
 "caWthcdxIAJ" = "Zapatos para hombre";
 "cay9ADQjpRT" = "Muebles";
@@ -79,10 +85,13 @@
 "cuRzYgo8krw" = "Zapatos para mujer";
 "cydPTRrUJye" = "Salud";
 "cDvl63HGh9j" = "Retailers";
-"cprn5lWuEDc" = "Online \u0026 Internet";
+"cprn5lWuEDc" = "Online & Internet";
 "c63MVeTZE3q" = "Ropa de niño";
 "cztraRwNrdX" = "Educación";
-"c0GCyIw3HBP" = "Postres y Dulces";
+"c0GCyIw3HBP" = "Postres & Dulces";
+
+"search_section_title_recents" = "Recientes";
+"search_section_title_results" = "Resultados";
 
 "category_results_error" = "Uphs, por favor intenta de nuevo";
 "category_results_empty" = "No se encontraron resultados";
@@ -98,7 +107,6 @@
 "settings_account_alert_password_action_change" = "Cambiar";
 "settings_account_alert_password_changed" = "Contraseña cambiada";
 "settings_account_alert_password_not_changed" = "Contraseña no cambiada";
-"settings_account_alert_cancel" = "Cancelar";
 "settings_account_alert_displayname_changed" = "Nombre cambiado";
 "settings_account_alert_displayname_not_changed" = "Nombre no cambiado";
 "settings_account_blocked_none" = "Ninguno";
@@ -106,18 +114,16 @@
 "settings_account_blocked_contact" = "contactos";
 "settings_account_recents_title" = "Limpiar búsquedas recientes";
 "settings_account_recents_alert_action_clean" = "Limpiar";
-"settings_account_recents_alert_action_cancel" = "Cancelar";
 "settings_account_logout_alert_action_logout" = "Cerrar sesión";
-"settings_account_logout_alert_action_cancel" = "Cancelar";
 
 "settings_chat_quality_alert_action_high" = "Alta";
 "settings_chat_quality_alert_action_medium" = "Media";
 "settings_chat_quality_alert_action_low" = "Baja";
-"settings_chat_quality_alert_action_cancel" = "Cancelar";
 
 /*
  * Common strings
  */
+"common_action_done" = "Listo";
 "common_action_cancel" = "Cancelar";
 "common_field_required" = "Campo requerido";
 "common_field_invalid" = "Campo inválido";
