--- a/Conversa/es.lproj/Localizable.strings
+++ b/Conversa/es.lproj/Localizable.strings
@@ -35,12 +35,12 @@
 "conversation_inputtoolbar_placeholder" = "Escribe un mensaje";
 "conversation_menu_item_copy" = "Copiar";
 "conversation_menu_item_delete" = "Eliminar";
-"conversation_navigation_title" = "Atrás";
 "conversation_more_alert_action_library" = "Librería";
 "conversation_more_alert_action_camara" = "Cámara";
 "conversation_more_alert_action_location" = "Enviar ubicación";
-"conversation_message_info_received" = "Recibido";
-"conversation_message_info_waiting" = "Esperando";
+"conversation_message_info_sending" = "Enviando";
+"conversation_message_info_uploading" = "Subiendo";
+"conversation_message_info_downloading" = "Descargando";
 "conversation_message_info_sent" = "Enviado";
 "conversation_message_info_failed" = "Fallido";
 "conversation_subtitle_writing" = "escribiendo...";
@@ -65,6 +65,8 @@
 "category_results_empty" = "No se encontraron resultados";
 
 "mapview_controller_title" = "Mapa";
+
+"profile_share_text" = "Chatea ahora con %1s, sigue el link %2s";
 
 "settings_home_profile_hi" = "Hola";
 "settings_home_share_text" = "Descarga esta aplicación para hablar con casi cualquier negocio";
